--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
-  description: Set up the latest version of supervisor in Ubuntu systems
+  description: Set up the latest or a specific version of supervisor in Ubuntu systems
   license: MIT
   min_ansible_version: 1.4
   platforms:
