Added present/absent functionality for programs and groups

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,87 +1,10 @@
 # tasks file for supervisor
 ---
-- name: install (pip) dependencies
-  apt:
-    name: "{{ item }}"
-    state: latest
-    update_cache: true
-    cache_valid_time: 3600
-  with_items: supervisor_pip_dependencies
-  tags: [configuration, supervisor, supervisor-pip-dependencies]
-
-- name: install supervisor (specific version)
-  pip:
-    name: supervisor
-    version: "{{ supervisor_version }}"
-  when: "supervisor_version != 'latest'"
-  tags: [configuration, supervisor, supervisor-install]
-
-- name: install supervisor (latest version)
-  pip:
-    name: supervisor
-    state: "{{ supervisor_version }}"
-  when: "supervisor_version == 'latest'"
-  tags: [configuration, supervisor, supervisor-install]
-
-- name: create directories
-  file:
-    path: "{{ item | dirname }}"
-    state: directory
-    owner: root
-    group: root
-    mode: 0755
-  with_items:
-    - "{{ supervisor_configuration_file }}"
-    - "{{ supervisor_unix_http_server_file }}"
-    - "{{ supervisor_supervisord_logfile }}"
-    - "{{ supervisor_supervisord_pidfile }}"
-    - "{{ supervisor_supervisord_childlogdir }}"
-    - "{{ supervisor_include }}"
-  tags: [configuration, supervisor, supervisor-directories]
-
-- name: update configuration file - /etc/supervisor/supervisord.conf
-  template:
-    src: etc/supervisor/supervisord.conf.j2
-    dest: "{{ supervisor_configuration_file }}"
-    owner: root
-    group: root
-    mode: 0640
-  notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration]
-
-- name: update init script - /etc/init.d/supervisor
-  template:
-    src: etc/init.d/supervisor.j2
-    dest: /etc/init.d/supervisor
-    owner: root
-    group: root
-    mode: 0755
-  notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration]
-
-- name: update program configuration files
-  template:
-    src: etc/supervisor/conf.d/program.conf.j2
-    dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
-    owner: root
-    group: root
-    mode: 0640
-  with_dict: supervisor_programs
-  when: supervisor_programs
-  notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-programs]
-
-- name: update group configuration files
-  template:
-    src: etc/supervisor/conf.d/group.conf.j2
-    dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
-    owner: root
-    group: root
-    mode: 0640
-  with_dict: supervisor_groups
-  when: supervisor_groups
-  notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-groups]
+- include: pip.yml
+- include: install.yml
+- include: configure.yml
+- include: programs.yml
+- include: groups.yml
 
 - name: start and enable service
   service:
