--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,5 +18,7 @@ supervisor_supervisorctl_serverurl: "unix://{{ supervisor_unix_http_server_file 
 
 supervisor_include: '/etc/supervisor/conf.d/*.conf'
 
-supervisor_programs: {}
-supervisor_groups: {}
+supervisor_programs_present: {}
+supervisor_programs_absent: {}
+supervisor_groups_present: {}
+supervisor_groups_absent: {}
