Appended a slash to paths to force "a follow"
Fixes #7

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -2,7 +2,7 @@
 ---
 - name: create directories
   file:
-    path: "{{ item | dirname }}"
+    path: "{{ item | dirname }}/"
     state: directory
     owner: root
     group: root
