--- a/tasks/groups.yml
+++ b/tasks/groups.yml
@@ -1,6 +1,6 @@
 # tasks file for supervisor
 ---
-- name: update group configuration files (present)
+- name: groups | update group configuration files (present)
   template:
     src: etc/supervisor/conf.d/group.conf.j2
     dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
@@ -9,12 +9,14 @@
     mode: 0640
   with_dict: supervisor_groups_present
   notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-groups]
+  tags:
+    - supervisor-groups-present
 
-- name: update group configuration files (absent)
+- name: groups | update group configuration files (absent)
   file:
     path: "/etc/supervisor/conf.d/{{ item.key }}.conf"
     state: absent
   with_dict: supervisor_groups_absent
   notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-groups]
+  tags:
+    - supervisor-groups-absent
