--- a/tasks/programs.yml
+++ b/tasks/programs.yml
@@ -1,6 +1,6 @@
 # tasks file for supervisor
 ---
-- name: update program configuration files (present)
+- name: programs | update program configuration files (present)
   template:
     src: etc/supervisor/conf.d/program.conf.j2
     dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
@@ -9,12 +9,14 @@
     mode: 0640
   with_dict: supervisor_programs_present
   notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-programs]
+  tags:
+    - supervisor-programs-present
 
-- name: update program configuration files (absent)
+- name: programs | update program configuration files (absent)
   file:
     path: "/etc/supervisor/conf.d/{{ item.key }}.conf"
     state: absent
   with_dict: supervisor_programs_absent
   notify: restart supervisor
-  tags: [configuration, supervisor, supervisor-configuration-programs]
+  tags:
+    - supervisor-programs-absent
