Upgrade pip to the latest version

--- a/tests/pre.yml
+++ b/tests/pre.yml
@@ -9,7 +9,13 @@
   with_items:
     - python
     - curl
+
 - name: pre | update pip
   shell: "curl -sL https://bootstrap.pypa.io/get-pip.py | python -"
   args:
     creates: /usr/local/bin/pip
+
+- name: pre | upgrade pip
+  pip:
+    name: pip
+    state: latest
