Upgrade pip to the latest version

--- a/tests/pre.yml
+++ b/tests/pre.yml
@@ -10,12 +10,6 @@
     - python
     - curl
 
-- name: pre | update pip
+- name: pre | install pip
   shell: "curl -sL https://bootstrap.pypa.io/get-pip.py | python -"
-  args:
-    creates: /usr/local/bin/pip
-
-- name: pre | upgrade pip
-  pip:
-    name: pip
-    state: latest
+  changed_when: false
