--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,11 @@ branches:
   only:
     - master
 
+matrix:
+  allow_failures:
+    # See https://github.com/ansible/ansible/issues/6385
+    - env: ANSIBLE_VERSION=1.5.1
+
 before_install:
   - sudo apt-get update -qq
 
