--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,4 +4,4 @@
   service:
     name: supervisor
     state: restarted
-  when: supervisor_state == "started"
+  when: supervisor_state == 'started'
