--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,7 +1,8 @@
 # test file for supervisor
 ---
 - hosts: localhost
-  remote_user: root
+  connection: local
+  sudo: true
   pre_tasks:
     - include: pre.yml
   roles:
