Fix for Ansible galaxy (import) warning
Found galaxy_info.categories. Update meta/main.yml to use galaxy_info.galaxy_tags

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,7 +11,7 @@ galaxy_info:
     versions:
       - precise
       - trusty
-  categories:
+  galaxy_tags:
     - web
     - system
     - networking
