--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,7 +6,7 @@
     state: latest
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
-  with_items: supervisor_dependencies
+  with_items: "{{ supervisor_dependencies }}"
   tags:
     - supervisor-install-dependencies
 
