--- a/tasks/programs.yml
+++ b/tasks/programs.yml
@@ -7,7 +7,7 @@
     owner: root
     group: root
     mode: 0640
-  with_dict: supervisor_programs_present
+  with_dict: "{{ supervisor_programs_present }}"
   notify: restart supervisor
   tags:
     - supervisor-programs-present
@@ -16,7 +16,7 @@
   file:
     path: "/etc/supervisor/conf.d/{{ item.key }}.conf"
     state: absent
-  with_dict: supervisor_programs_absent
+  with_dict: "{{ supervisor_programs_absent }}"
   notify: restart supervisor
   tags:
     - supervisor-programs-absent
