--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -19,8 +19,8 @@
   file:
     path: "{{ item.item }}"
     state: directory
-    owner: root
-    group: root
+    owner: "{{ supervisor_system_user }}"
+    group: "{{ supervisor_system_group }}"
     mode: 0755
   with_items: "{{ stat_directories.results }}"
   when: item.stat.exists == false
@@ -32,8 +32,8 @@
   template:
     src: etc/supervisor/supervisord.conf.j2
     dest: "{{ supervisor_configuration_file }}"
-    owner: root
-    group: root
+    owner: "{{ supervisor_system_user }}"
+    group: "{{ supervisor_system_group }}"
     mode: 0640
   notify: restart supervisor
   tags:
@@ -44,8 +44,8 @@
   template:
     src: etc/init.d/supervisor.j2
     dest: /etc/init.d/supervisor
-    owner: root
-    group: root
+    owner: "{{ supervisor_system_user }}"
+    group: "{{ supervisor_system_group }}"
     mode: 0755
   notify: restart supervisor
   tags:
