--- a/tasks/programs.yml
+++ b/tasks/programs.yml
@@ -4,8 +4,8 @@
   template:
     src: etc/supervisor/conf.d/program.conf.j2
     dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
-    owner: root
-    group: root
+    owner: "{{ supervisor_system_user }}"
+    group: "{{ supervisor_system_group }}"
     mode: 0640
   with_dict: "{{ supervisor_programs_present }}"
   notify: restart supervisor
