--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,8 @@ supervisor_unix_http_server_chmod: '0700'
 supervisor_system_user: root
 supervisor_system_group: root
 
+supervisor_configuration_file: /etc/supervisor/supervisord.conf
+
 supervisor_inet_http_server_enabled: false
 supervisor_inet_http_server_port: 9001
 supervisor_inet_http_server_username: admin
