adding become yes in handler to allow root to restart supervisor.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,8 @@
 # handlers file for supervisor
 ---
 - name: restart supervisor
+  become: yes
+  # become_user: "{{ supervisor_system_user }}"
   service:
     name: supervisor
     state: restarted
