--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,6 +24,15 @@
     - supervisor
     - supervisor-groups
 
+- name: stop supervisor
+  service:
+    name: supervisor
+    state: stopped
+  tags:
+    - configuration
+    - supervisor
+    - supervisor-stop-service
+
 - name: start and enable service
   service:
     name: supervisor
