Add systemd support

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,3 +5,10 @@
     name: supervisor
     state: restarted
   when: supervisor_state == 'started'
+
+- name: restart supervisor via systemd
+  systemd:
+    name: supervisor
+    state: "{{ supervisor_state }}"
+    enabled: yes
+    daemon_reload: yes
