--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -48,6 +48,20 @@
     group: "{{ supervisor_system_group }}"
     mode: 0755
   notify: restart supervisor
+  when: ansible_service_mgr != "systemd"
   tags:
     - supervisor-configure-configuration
     - supervisor-configure-configuration-init
+
+- name: configure | update systemd init script - /etc/systemd/system/supervisor.service
+  template:
+    src: etc/systemd/system/supervisor.service.j2
+    dest: /etc/systemd/system/supervisor.service
+    owner: "{{ supervisor_system_user }}"
+    group: "{{ supervisor_system_group }}"
+    mode: 0755
+  notify: restart supervisor via systemd
+  when: ansible_service_mgr == "systemd"
+  tags:
+    - supervisor-configure-configuration
+    - supervisor-configure-configuration-init-systemd
