--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,8 @@ supervisor_inet_http_server_port: 9001
 supervisor_inet_http_server_username: admin
 supervisor_inet_http_server_password: '4ubA&Et=ASPe'
 
+supervisor_supervisord_restart_sec: 5
+
 supervisor_supervisord_nodaemon: false
 supervisor_supervisord_logfile: /var/log/supervisor/supervisord.log
 supervisor_supervisord_pidfile: /var/run/supervisord.pid
