--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,10 +7,11 @@ galaxy_info:
   license: MIT
   min_ansible_version: 1.6
   platforms:
-  - name: Ubuntu
-    versions:
-      - precise
-      - trusty
+    - name: Ubuntu
+      versions:
+        - precise
+        - trusty
+        - xenial
   galaxy_tags:
     - web
     - system
