Update galaxy_info with support for Debian 8

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,6 +12,9 @@ galaxy_info:
         - precise
         - trusty
         - xenial
+    - name: Debian
+      versions:
+        - jessie
   galaxy_tags:
     - web
     - system
