Add latest Ansible versions (2.5.12, 2.6.8, 2.6.9, 2.7.2, 2.7.3) And fix some warnings

--- a/tasks/service-systemd.yml
+++ b/tasks/service-systemd.yml
@@ -14,6 +14,6 @@
 
 - name: service | systemd | reload
   command: systemctl daemon-reload
-  when: _update_systemd_script | changed
+  when: _update_systemd_script is changed
   tags:
     - supervisor-service-systemd-reload
