--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python: "2.7"
 
 env:
   - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.7.8
+  - ANSIBLE_VERSION=2.7.7
   - ANSIBLE_VERSION=2.7.6
   - ANSIBLE_VERSION=2.7.5
   - ANSIBLE_VERSION=2.7.4
@@ -14,6 +16,8 @@ env:
   - ANSIBLE_VERSION=2.7.2
   - ANSIBLE_VERSION=2.7.1
   - ANSIBLE_VERSION=2.7.0
+  - ANSIBLE_VERSION=2.6.14
+  - ANSIBLE_VERSION=2.6.13
   - ANSIBLE_VERSION=2.6.12
   - ANSIBLE_VERSION=2.6.11
   - ANSIBLE_VERSION=2.6.10
@@ -27,6 +31,7 @@ env:
   - ANSIBLE_VERSION=2.6.2
   - ANSIBLE_VERSION=2.6.1
   - ANSIBLE_VERSION=2.6.0
+  - ANSIBLE_VERSION=2.5.15
   - ANSIBLE_VERSION=2.5.14
   - ANSIBLE_VERSION=2.5.13
   - ANSIBLE_VERSION=2.5.12
@@ -76,9 +81,6 @@ script:
 
 notifications:
   email: false
-  hipchat:
-    rooms:
-      secure: EXxXpxXsIXqdYbQ6eSUjMIk01ga4P1l7RUTK8q1HRyvJVsoi3wVdIp4s9TIYp8qYL5AFesWw3M64FrUrXQaBm/Ai2TJREkq9esZbm6BvHaAlWHaank6h01pyWNPTckl+9oF1mxZbrhRZXGWl2zKpZ9lyf4Xv41cczO0RQYjHXTo=
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
   slack:
     rooms:
