--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,3 +2,5 @@
 ---
 supervisor_install_prefix: /usr/local/bin
 supervisor_default_file: /etc/default/supervisor
+supervisor_etc_init_d_file: /etc/init.d/supervisor
+supervisor_etc_systemd_file: /etc/systemd/system/supervisor.service
