--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,8 @@
 # defaults file for supervisor
 ---
-
+supervisor_python_version: 2
 supervisor_dependencies:
-  - python
-supervisor_pip_executable: pip2
+  - "python{{ supervisor_python_version is version('3', '>=') | ternary('3', '') }}"
 
 supervisor_version: latest
 supervisor_unix_http_server_file: /var/run/supervisor.sock
