--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,8 @@
-# vars file for supervisor
+# vars file
 ---
 supervisor_install_prefix: /usr/local/bin
 supervisor_default_file: /etc/default/supervisor
 supervisor_etc_init_d_file: /etc/init.d/supervisor
 supervisor_etc_systemd_file: /etc/systemd/system/supervisor.service
+
+supervisor_pip_executable: "pip{{ supervisor_python_version_major | string }}"
