--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
-# meta file for supervisor
+# meta file
 ---
 galaxy_info:
+  namespace: oefenweb
   role_name: supervisor
   author: Mischa ter Smitten
   company: Oefenweb.nl B.V.
@@ -10,13 +11,11 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - precise
-        - trusty
         - xenial
         - bionic
+        - focal
     - name: Debian
       versions:
-        - wheezy
         - jessie
         - stretch
         - buster
