--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -1,9 +1,16 @@
-# test file for supervisor
+# test file
 ---
 - hosts: all
   remote_user: vagrant
   become: true
   pre_tasks:
-    - include: pre.yml
+    - name: include variables
+      include_vars: "{{ item }}"
+      with_first_found:
+        - "{{ playbook_dir }}/vars/_{{ ansible_distribution_release }}.yml"
+        - "{{ playbook_dir }}/vars/_{{ ansible_distribution | lower }}.yml"
+        - "{{ playbook_dir }}/vars/_default.yml"
+    - name: include tasks
+      include: "{{ playbook_dir }}/tasks/pre.yml"
   roles:
     - ../../
