Fix issues with warn: false

--- a/tests/tasks/pre.yml
+++ b/tests/tasks/pre.yml
@@ -9,11 +9,9 @@
     update_cache: true
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
 
-- name: install pip
+- name: install pip  # noqa command-instead-of-module
   shell: >
     curl -sL {{ supervisor_get_pip_url }} | python{{ supervisor_python_version_major | string }} -
-  args:
-    warn: false
   changed_when: false
   tags:
     - skip_ansible_lint
