--- a/tests/tasks/pre.yml
+++ b/tests/tasks/pre.yml
@@ -1,7 +1,7 @@
 # pre test file
 ---
 - name: install dependencies
-  apt:
+  ansible.builtin.apt:
     name:
       - "python{{ supervisor_python_version_major is version('3', '>=') | ternary('3', '') }}"
       - curl
@@ -10,7 +10,7 @@
     cache_valid_time: "{{ apt_update_cache_valid_time | default(3600) }}"
 
 - name: install pip  # noqa command-instead-of-module
-  shell: >
+  ansible.builtin.shell: >
     curl -sL {{ supervisor_get_pip_url }} | python{{ supervisor_python_version_major | string }} -
   changed_when: false
   tags:
