--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 # handlers file
 ---
 - name: restart supervisor
-  service:
+  ansible.builtin.service:
     name: supervisor
     state: restarted
   when: service_default_state | default('started') == 'started'
