--- a/tasks/programs.yml
+++ b/tasks/programs.yml
@@ -1,7 +1,7 @@
 # tasks file
 ---
 - name: programs | update program configuration files (present)
-  template:
+  ansible.builtin.template:
     src: etc/supervisor/conf.d/program.conf.j2
     dest: "/etc/supervisor/conf.d/{{ item.key }}.conf"
     owner: "{{ supervisor_system_user }}"
@@ -13,7 +13,7 @@
     - supervisor-programs-present
 
 - name: programs | update program configuration files (absent)
-  file:
+  ansible.builtin.file:
     path: "/etc/supervisor/conf.d/{{ item.key }}.conf"
     state: absent
   with_dict: "{{ supervisor_programs_absent }}"
