--- a/tasks/service-systemd.yml
+++ b/tasks/service-systemd.yml
@@ -1,7 +1,7 @@
 # tasks file
 ---
 - name: configure | systemd | update script
-  template:
+  ansible.builtin.template:
     src: "{{ supervisor_etc_systemd_file.lstrip('/') }}.j2"
     dest: "{{ supervisor_etc_systemd_file }}"
     owner: "{{ supervisor_system_user }}"
@@ -13,7 +13,7 @@
     - supervisor-service-systemd-update
 
 - name: service | systemd | reload
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
   when: _update_systemd_script is changed
   tags:
